# gdk-pixbuf-loader-lunasvg

./: .gitignore  COPYING  README.md  libpixbufloader-svg.cc  meson.build
subprojects/: lunasvg.wrap
